Return argument annotation